<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"

    >

    <Button
        android:id="@+id/btnadd"
        android:layout_width="113dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="164dp"
        android:layout_marginStart="63dp"
        android:background="#f2f2f2"
        android:text="@string/add"
        android:textColor="#fef499"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="113dp"
        android:layout_height="80dp"
        android:layout_alignEnd="@+id/et2"
        android:layout_alignTop="@+id/btnadd"
        android:background="#f2f2f2"
        android:text="@string/sub"
        android:textColor="#445566"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="113dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnadd"
        android:layout_marginBottom="68dp"
        android:background="#f2f2f2"
        android:text="@string/mul"
        android:textColor="#662"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="113dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/btnsub"
        android:layout_alignTop="@+id/btnmul"
        android:text="@string/div"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#f2f2f2"/>

    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et3"
        android:layout_marginTop="141dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et2"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et1"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/n1"
        android:textColor="#657"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et2"
        android:layout_marginEnd="-79dp"
        android:layout_toStartOf="@+id/btnadd"
        android:text="@string/n2"
        android:textColor="#753"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/et3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:text="@string/result"
        android:textColor="#685"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <EditText
        android:id="@+id/et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="63dp"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor,RelativeOverlap" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/calculator"
        android:textColor="#4469b3"
        android:textSize="47sp"
        android:textStyle="bold" />


</RelativeLayout>